fixed play pause alignment

--- a/src/style.scss
+++ b/src/style.scss
@@ -59,13 +59,19 @@ input {
     color: #222222;
 }
 
-.play-pause {
-    font-size: 128px;
-}
+timer {
+    .play-pause {
+        font-size: 128px;
+    }
 
-.timer-text {
-    font-size: 72px;
-}
+    .glyphicon-pause {
+        padding-left: 12px; 
+    }
+
+    .timer-text {
+        font-size: 72px;
+    }
+} 
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
 .site-wrapper {
@@ -189,11 +195,12 @@ input {
    position:absolute;
    top:0;
    right:0;
-   margin-top: 150px;
-   margin-right: 80px; 
+   margin-top: 100px;
+   margin-right: 75px; 
    padding: 25px;
    background-color: #222222;
    opacity: 0.9;
+   border-radius: 12px; 
 }
   
   /* Handle the widths */
